tests/ui/type-alias-impl-trait/hkl_forbidden4.stderr
error[E0792]: expected generic lifetime parameter, found `'any`
  --> $DIR/hkl_forbidden4.rs:15:5
   |
LL | async fn operation(_: &mut ()) -> () {
   |                       - this generic parameter must be used with a generic lifetime parameter
LL |
LL |     call(operation).await
   |     ^^^^^^^^^^^^^^^

error[E0792]: expected generic lifetime parameter, found `'any`
  --> $DIR/hkl_forbidden4.rs:23:1
   |
LL |   type FutNothing<'a> = impl 'a + Future<Output = ()>;
   |                   -- this generic parameter must be used with a generic lifetime parameter
...
LL | / {
LL | |
LL | |
LL | | }
   | |_^

error: concrete type differs from previous defining opaque type use
  --> $DIR/hkl_forbidden4.rs:13:1
   |
LL | async fn operation(_: &mut ()) -> () {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `FutNothing<'_>`, got `{async fn body of operation()}`
   |
note: previous use here
  --> $DIR/hkl_forbidden4.rs:15:5
   |
LL |     call(operation).await
   |     ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0792`.
